--- a/page4.html
+++ b/page4.html
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div id = "przycisk2">
-            <a href="index.html">
+            <a href="page5.html">
                 <button type="button">DALEJ</button>
             </a>
         </div>
