--- a/1_mainPage/mainPage.html
+++ b/1_mainPage/mainPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just Szczecin Things</title>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
 <body>
@@ -13,8 +13,8 @@
 
 <div class="NavSearchGroup">
     <div class="mainNav">
-        <img src="./logo.svg" alt="Logo">
-        <a href="page2.html">
+        <img src="../img/logo.svg" alt="Logo">
+        <a href="../2_chooseDate/chooseDate.html">
             <button type="button">ZAPLANUJ DZIEŃ</button>
         </a>
     </div>
@@ -25,7 +25,8 @@
 </div>
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-<script src="index3.js"></script>
+<script src="map.js"></script>
 
 </body>
 </html>
+
