--- a/2_chooseDate/chooseDate.html
+++ b/2_chooseDate/chooseDate.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="kalendarz.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="calendar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Just Szczecin Things</title>
 </head>
@@ -22,25 +23,25 @@
     <!-- Wybor pory dnia: -->
     <div class="wybor">
         <div id="poranek">
-            <button type="button">PORANEK<img src="poranek.svg" alt="poranek"></button>
+            <button type="button">PORANEK<img src="../img/poranek.svg" alt="poranek"></button>
         </div>
         <div id="dzien">
-            <button type="button">DZIEŃ<img src="dzien.svg" alt="dzien"></button>
+            <button type="button">DZIEŃ<img src="../img/dzien.svg" alt="dzien"></button>
         </div>
         <div id="wieczor">
-            <button type="button">WIECZÓR<img src="wieczor.svg" alt="wieczor"></button>
+            <button type="button">WIECZÓR<img src="../img/wieczor.svg" alt="wieczor"></button>
         </div>
     </div> <!-- Koniec div wybor -->
     <!-- Przyciski na dole strony:-->
 </div>
 <div class = "przyciski">
         <div id = "przycisk1">
-            <a href="index.html">
+            <a href="../1_mainPage/mainPage.html">
                 <button type="button">COFNIJ</button>
             </a>
         </div>
         <div id = "przycisk2">
-            <a href="page3.html">
+            <a href="../3_chooseTags/chooseTags.html">
                 <button type="button">DALEJ</button>
             </a>
         </div>
@@ -50,7 +51,7 @@
 <!-- Koniec div "wszystko" -->
 
 
-<script src="index2.js"></script>
+<script src="calendar.js"></script>
 
 
 
