--- a/3_chooseTags/chooseTags.html
+++ b/3_chooseTags/chooseTags.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style.css">
     <title>Just Szczecin Things</title>
 </head>
 <body>
@@ -11,13 +12,13 @@
 
     <div class="wybor">
         <div id="poranek">
-            <button type="button">SOLO<img src="solo.svg" alt="poranek"></button>
+            <button type="button">SOLO<img src="../img/solo.svg" alt="poranek"></button>
         </div>
         <div id="dzien">
-            <button type="button">RANDKA<img src="randka.svg" alt="dzien"></button>
+            <button type="button">RANDKA<img src="../img/randka.svg" alt="dzien"></button>
         </div>
         <div id="wieczor">
-            <button type="button">ZNAJOMI<img src="znajomi.svg" alt="wieczor"></button>
+            <button type="button">ZNAJOMI<img src="../img/znajomi.svg" alt="wieczor"></button>
         </div>
     </div> <!-- Koniec div wybor -->
 
@@ -25,7 +26,6 @@
     <!--TEKST 2 "Jak chcialbys spedzic wieczor"-->
     <div class = "tekstLaczony1">
         <p id="text2">Jak chciałbyś spędzić wieczór? </p>
-        <p id="text3">Wybierz ile chcesz</p>
     </div>
 
 
@@ -63,7 +63,7 @@
     <!--TEKST 3 "Inne propozycje"-->
     <div class = "tekstLaczony2">
         <p id="text4">Inne propozycje? </p>
-        <p id="text5">Wpisz oddzielając przecinkiem</p>
+
     </div>
 
     <!--INPUT BAR-->
@@ -76,12 +76,12 @@
     <!-- Przyciski na dole strony:-->
         <div class = "przyciski">
             <div id = "przycisk1">
-                <a href="page2.html">
+                <a href="../2_chooseDate/chooseDate.html">
                     <button type="button">COFNIJ</button>
                 </a>
             </div>
             <div id = "przycisk2">
-                <a href="page4.html">
+                <a href="../4_ChooseDestination/chooseDestination.html">
                     <button type="button">DALEJ</button>
                 </a>
             </div>
