--- a/4_ChooseDestination/chooseDestination.html
+++ b/4_ChooseDestination/chooseDestination.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
 <body>
 <div class="wszystko">
     <div class = "tekstLaczony1">
-        <p id="text1">Plan dnia </p>
-        <p id="text2">Wybierz ile chcesz</p>
+        <p >Plan dnia </p>
     </div>
     <!--JEDZENIE-->
     <p>Jedzenie </p>
@@ -49,12 +49,12 @@
 <!-- Przyciski na dole strony:-->
     <div class = "przyciski">
         <div id = "przycisk1">
-            <a href="page2.html">
+            <a href="../2_chooseDate/chooseDate.html">
                 <button type="button">COFNIJ</button>
             </a>
         </div>
         <div id = "przycisk2">
-            <a href="page5.html">
+            <a href="../5_Pins/pins.html">
                 <button type="button">DALEJ</button>
             </a>
         </div>
