--- a/5_Pins/pins.html
+++ b/5_Pins/pins.html
@@ -13,8 +13,8 @@
 
 <div class="NavSearchGroup">
     <div class="mainNav">
-        <img src="./logo.svg" alt="Logo">
-        <a href="page2.html">
+        <img src="../img/logo.svg" alt="Logo">
+        <a href="../2_chooseDate/chooseDate.html">
             <button type="button">ZAPLANUJ DZIEŃ</button>
         </a>
     </div>
@@ -25,7 +25,7 @@
 </div>
 
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-<script src="index.js"></script>
+<script src="pins.js"></script>
 
 </body>
 </html>
